# libfindindent

./: .gitattributes  .overcommit.yml  .travis.yml  CMakeLists.txt  FindIndent.cpp  FindIndent.h  README.md
.git-hooks/pre_commit/: cppcheck.rb
.github/workflows/: ci.yml
Tests/: Tests.cpp  stdafx.cpp  stdafx.h
